--- a/egghead/filters/index.html
+++ b/egghead/filters/index.html
@@ -7,7 +7,7 @@
     <div ng-app="myApp">
       <div ng-controller="FirstCtrl">
         <input type="text" ng-model="message">
-        <p>{{message|check}}</p>
+        <p>{{message|reverse}}</p>
       </div>    
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
